# MEGAHACK-2026_Merge-ConflictX

./: .gitignore  API_DOCUMENTATION.md  BACKEND_IMPLEMENTATION.md  ENDPOINT_REFERENCE.md  QUICK_START.md  README.md  README_API.md  START_HERE.md  main.py  pyproject.toml  test_api.py  testrun.py
backend/api/: job_manager.py  main.py  models.py
backend/api/routes/: analysis.py  automation.py  chatbot.py  data.py  ingestion.py  jobs.py  mapping.py  report.py  stream.py  upload.py
backend/app/pipelines/: __init__.py  insight_pipeline.py  output_storage.py
backend/app/schema/: __init__.py  document_insight_schema.py
backend/app/services/: __init__.py  chatbot_rag_service.py  clause_detection_service.py  llm_service.py  ollama_service.py  scrape_memory_service.py  semantic_segmentation_service.py  stakeholder_extraction_service.py  summarization_service.py  topic_classification_service.py  website_knowledge_service.py
backend/cleaning/: ocr_module.py  pdf_cleaner.py  test.py  text_cleaner.py  wav_cleaner.py  xml_cleaner.py
backend/models/: __init__.py  embedding_features.py  tfidf_features.py
backend/pipelines/: orchestration.py  post_cleaning_pipeline.py
backend/preprocessing/: __init__.py  chunker.py
backend/test_data/: sample.txt
backend/validation/: __init__.py  error_report_pdf.py  run_validations.py  strict_validator.py
backend/vector_store/: __init__.py  faiss_integration.py
docs/: ARCHITECTURE.md
extension/: manifest.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
(+23 files in other folders)
